GNOME Bugzilla – Bug 792924
Fix warnings from recent glib changes to g_object_(un)ref
Last modified: 2018-01-28 16:00:36 UTC
Created attachment 367468 [details] [review] Cast GObject pointers to their proper types when reffing See patch
Thanks! commit e716b7a08b723059cd27e004a1f5bb6674aff6ee Author: Timm Bäder <> Date: Fri Jan 26 12:08:04 2018 +0100 Cast GObject pointers to their proper types when reffing glib now propagates the real pointer type that gets reffed. And it doesn't hurt with older glib versions. https://bugzilla.gnome.org/show_bug.cgi?id=792924 --- This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.