Cast GObject pointers to their proper types when reffing

glib now propagates the real pointer type that gets reffed. And it
doesn't hurt with older glib versions.

https://bugzilla.gnome.org/show_bug.cgi?id=792924